# llm_etl_framework

./: .env.example  .gitignore  README.md  pyproject.toml
examples/patient_classification/: run.py
src/llm_etl/: __init__.py
src/llm_etl/core/: __init__.py  exceptions.py  pipeline.py  state.py
src/llm_etl/llm/: __init__.py  base_schemas.py  client.py
src/llm_etl/llm/providers/: __init__.py  azure_openai.py  mock.py
src/llm_etl/sinks/: __init__.py  base.py  csv_sink.py  sql_server.py
src/llm_etl/sources/: __init__.py  base.py  csv_source.py  sql_server.py
src/llm_etl/steps/: __init__.py  base.py  classifier.py  summarizer.py
src/llm_etl/validation/: __init__.py
tests/: test_classifier.py  test_integration.py  test_state.py
